wrap up openness

--- a/content/post/managing-the-commons.Rmd
+++ b/content/post/managing-the-commons.Rmd
@@ -17,6 +17,9 @@ Elinor Ostrom won a nobel prize in economics for
 describing the conditions under which groups exploiting natural resources can self govern without
 top-down regulation. She formulated 8 design principles to follow. 
 
+
+[Some good stuff on this page.](https://www.outdoorlife.com/articles/hunting/2016/01/it-time-rethink-north-american-model-wildlife-conservation/)
+
 ## Clearly defined boundaries
 
 Boundaries refer not only to spatial boundaries, but also to who is in the 
