Final version spoons

--- a/content/post/out-of-spoons.Rmd
+++ b/content/post/out-of-spoons.Rmd
@@ -5,7 +5,7 @@ date: '`r Sys.Date()`'
 output: 
   html_document:
     code_folding: hide
-draft: yes
+draft: no
 slug: out-of-spoons
 tags_include:
 - Mental Health
@@ -36,4 +36,30 @@ I was done for today. Nonetheless I made it to my counseling appointment. Now I'
 in negative spoon territory. This isn't part of the original metaphor, but helps
 explain why I have the strength to get through some days. I borrow spoons against
 tomorrow's supply. Trouble is, borrowed spoons come with a ridiculously high interest 
-rate. 
+rate. Eventually I wake up with negative spoons. Carry that kind of debt for too 
+long and I will end up [where I was last winter break](/post/mental-health-redux). 
+Unlike money, I can borrow spoons, but I can't save them. Surplus 
+spoons disappear overnight.
+
+Not every activity costs spoons; I gain spoons from some things. Free writing 
+like this blog post is, well, free. No spoons lost. Lying on the floor of my
+office doesn't cost spoons either, but it looks a little weird. Early in the summer
+I spent a lot of time programming and analyzing data. When things go well, spoons! 
+Unfortunately those activities don't always go well, and then bleagh, spoon loss.[^1] 
+But on average programming and analyzing data builds the spoon supply. Cooking
+is another variable activity. When I'm cooking with spoons to spare, it
+builds spoons. I really like cooking. But when I'm out -- cooking is a drag.
+
+Looking over the last few weeks, I've spent a lot of days just sitting in my office
+staring at the wall. Many evenings I'm flat broke in the spoon department. That's
+not where I want to be, and the semester hasn't even started yet. So, back to the
+psychiatrist tomorrow for a discussion about the medication mix. I'll be watching
+my spoons very, very closely over the next few weeks. I'll hand them out sparingly.
+In fact, I think I might put an envelope of spoons on the door of my office.
+You want to talk to me, hand me a spoon. When the envelope's empty, sorry, come 
+back tomorrow. Is there a way to have my e-mail autoresponse count spoons?
+
+
+[^1]: This is one of those things I've been working on. Controlling my expectations
+so that when things don't work out, I don't spend a spoon on it. I almost always 
+figure out the problem eventually. 
