--- a/content/post/dispatches-1.Rmd
+++ b/content/post/dispatches-1.Rmd
@@ -15,7 +15,7 @@ categories: Personal
 
 A couple weeks ago I realized that my low, but stable, state was in fact a nosedive.
 Since then I pretty much cratered, crawled out, and maybe, just maybe, I'm back
-on my feet again. 
+on my feet again. Trigger warning: I will discuss suicidal ideation below.
 
 I spent the week following my realization just waiting for something new to happen.
 I refocused on a very small number of things that just had to get done. Each day, 
@@ -44,5 +44,52 @@ and when I last spoke with them they were taking no medication at all.
 
 2 seconds of magnetic pulses every 20 
 seconds for 20 minutes. It isn't very comfortable, and I leave the sessions with
-a headache. The first day or two I felt pretty wide awake right afterward, although
+a headache. Most of the time I just breathe, eyes closed, counting breaths. It is
+hard to have a conversation with the tech when every 18 seconds a woodpecker starts
+hammering on your skull. The muscles in the right side of my jaw clench. Then it 
+passes and I resume counting. 
+The first day or two I felt pretty wide awake right afterward, although
 the feeling didn't last past noon.
+
+Last Wednesday I tried something completely different: acupuncture. I wouldn't 
+have considered it at all, but I've known Lezlie Abbott at Nebraska Acupuncture for
+a long time. So why not. I figure anything that's been around for millenia must
+have some efficacy. Even if the underlying model of classical eastern medicine is
+wrong, it might still make accurate predictions. Machine learning works, after all.
+
+> All models are wrong, but some of them are useful.
+> -- George Box, statistician
+
+One of the things that impressed me the most about that first session was the level
+of detail in Lezlie's observations. A western doctor takes your pulse, and records the
+frequency. I don't know what Lezlie was looking for, but she took my pulse in both
+wrists and recorded at least 12 different bits of information. She looked at my
+tongue. She asked me how often I blow my nose -- often several times per hour -- and 
+was surprised at that answer. After quizzing me
+and recording a complete medical history, she loaded me up with needles. 
+
+Most of the needles I couldn't feel going in. A few I felt for a moment, but 
+after a second or two the sensation was gone. The two exceptions were one in my
+right lower leg, and another in the side of my right wrist. Both generated an
+achy sensation. Leslie wiggled (probably a technical term there) a few of the
+needles around after inserting them. 
+There were needles sticking out of me from head to toe. Then she 
+left me alone for 20 minutes. I took the opportunity to practice mindfulness 
+meditation. 
+
+Pulling the needles out generated more feeling than putting them in, but quickly
+gone. When I went to sit up on the table, I nearly couldn't do it -- like my abs
+had been unplugged. I had to roll over on my side and get up gradually. I felt 
+very relaxed. 
+
+I wasn't looking for this change, but over the next couple of days it seemed like
+my sinuses weren't draining as much as usual. Confirmation bias and all that, so
+I've started recording my kleenex use. I'm going back for another acupuncture session
+in two weeks, so I'll have a good baseline to compare.
+
+Wednesday evening I hit the bottom of this cycle. I lay awake most of the night thinking
+of suicide. Suicidal ideation (SI) isn't new to me, but normally I'm able to separate
+the occurence of those thoughts from me, myself. The thought appears, flashes past,
+and goes away. Now, that's still not good, but as my friend says it is like background radiation.
+There, but not particularly harmful. Wednesday evening the SI went from background 
+radiation to full-blown thinking. 
