final of dispatches 1

--- a/content/post/dispatches-1.Rmd
+++ b/content/post/dispatches-1.Rmd
@@ -61,20 +61,40 @@ radiation to full-blown thinking. So that wasn't fun.
 By the end of that first week I was also experiencing a high level of free-floating anxiety.
 I don't normally experience this; my anxiety is episodic, usually clearly attached
 to something like an upcoming deadline. Free-floating anxiety is just there, and
-ugh, I don't want to feel like that ever again! A friend who also did TMS experienced the
-same spike in anxiety at the start of the treatment. At the start of the 2nd week of
+ugh, I don't want to feel like that ever again! My friend who also did TMS experienced the
+same spike in anxiety. At the start of the 2nd week of
 TMS, my psychiatrist added a "right side" treatment to inhibit the anxiety. This 
-is a magnetic pulse every second for ~ 5 minutes, targeting the right dorsolateral prefrontal cortex. 
-And, um, wow! It just worked. No anxiety.
+is a magnetic pulse every second for ~ 3 minutes, targeting the right dorsolateral prefrontal cortex. 
+And, um, wow! It just worked. No anxiety. This stuff is amazing.
 
 Over the next few weeks my mood drifted steadily upwards, although I still 
 struggled to concentrate and focus on work. I felt well enough to try a lower dose
 of one medication, Mirtazipine. That stuff turns me into a zombie at 15 mg a day,
 but at 7.5 I wasn't getting my symptoms under control. So I'd been taking 11.75 mg
-a day, which controlled my symptoms and knocked me out. Although I slept, I never
+a day since May or so, which controlled my symptoms and didn't completely knock 
+me out. Although I slept, I never
 felt rested while taking the Mirtazipine. When I dropped the dose down to 7.5 mg 
 again, it felt like coming out from under a cloud. Suddenly I was sleeping better,
-waking rested, and just ... felt good. 
+waking rested, and just ... felt good. By the end of the 4th week of TMS, with the
+lowered dose of Mirtazipine, I felt better than I had imagined was possible. 
+
+I still wasn't able to concentrate though. Drifting along in a happy mood was fine,
+but I want to be able to work too! At the start of the 5th week of TMS, my psychiatrist
+shifted the inhibitory right side treatment to the stimulating fast pulse trains.
+I was worried the anxiety would come back, but it didn't. I think my concentration
+and focus improved, but those things are harder to track, and I'm dealing with some other
+personal issues that also occupied a huge amount of the past couple weeks.
+
+Today I am one week out from my last TMS treatment, and I feel OK. I'm not great,
+but the stuff I'm dealing with can knock a healthy person into a depressed state,
+so I think I'm doing very well, considering! I'm excited about the future again,
+cooking is a pleasure, and I'm even starting to work again. Over the coming weeks
+I will continue to return for follow-up appointments with the psychiatrist to 
+keep evaluating my mental state. I'm keeping my fingers crossed that this treatment
+sticks. 
+
+
+
 
 
 
