--- a/content/post/dispatches-2.Rmd
+++ b/content/post/dispatches-2.Rmd
@@ -13,7 +13,8 @@ tags_include:
 categories: Personal
 ---
 
-Last Wednesday I tried something completely different: acupuncture. I wouldn't 
+
+I tried something completely different: acupuncture. I wouldn't 
 have considered it at all, but I've known Lezlie Abbott at Nebraska Acupuncture for
 a long time. So why not. I figure anything that's been around for millenia must
 have some efficacy. Even if the underlying model of classical eastern medicine is
